# LRF-Integration

./: .gitignore  Approx_1_Sph2.f90  Approx_2_Sph2.f90  Approx_3_Sph2.f90  Approx_4_Sph2.f90  Approx_5_Sph2.f90  Approx_6_Sph2.f90  Approx_7_Sph2.f90  Approx_8_Sph2.f90  Coordinate_Transformation.f90  Dispersion_6_Sph2.f90  Dispersion_7_Sph2.f90  Dispersion_8_Sph2.f90  Dispersion_Sph2.f90  Dispersion_Sph3.f90  FittingConstant.f90  General_Coordinates_Format.f90  Geometry_Constant.f90  Geometry_Constant_v2.f90  HyperPolarizability_6_Sph2.f90  HyperPolarizability_7_Sph2.f90  HyperPolarizability_Sph2.f90  Index_Searcher.f90  Induction_4_Sph2.f90  Induction_5_Sph2.f90  Induction_6_Sph2.f90  Induction_7_Sph2.f90  Induction_8_Sph2.f90  Induction_Sph2.f90  Induction_Sph3.f90  LRF.f90  LongRangePotential.f90  Makefile  Multipole_Sph2.f90  Multipole_Sph3.f90  Multipoles.f90  README.md  Search.f90  T_l0.f90  T_lk.f90  (+18 more)
Cpp/: CMakeLists.txt  Makefile  calculate_tensor.cpp  evaluate_lrf.cpp  interactions.cpp  main.cpp  potential_energy_surface.cpp  potential_energy_surface.h
Fortran_03/: Fitting_Constant_v2.f90  LRF.f90  Makefile  Testing_v2.f90  build_production.f90  helper_functions.f90  min_example.f90  test_v2.f90
Fortran_95/: Dispersion_Sph3.f90  FittingConstant.f90  Geometry_Constant_v2.f90  Induction_Sph3.f90  LRF.f90  Makefile  Multipole_Sph3.f90  build_production.f90  helperFunc.f90  helper_functions.f90  min_example.f90  test_v2.f90
files/: .gitignore  coefficients.txt  coefficientsAp.txt  coefficients_Adp.txt  coefficients_Ap.txt  coefficients_old.txt  (+1 more)
(+136 files in other folders)
